--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
 sdk.dir=/Users/thisithakavinda/Library/Android/sdk
 flutter.sdk=/Users/thisithakavinda/SDK/flutter 3
-flutter.buildMode=release
+flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
